language/move-lang/tests/move_check/typing/type_variable_join_threaded_pack_invalid.exp
error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_pack_invalid.move:35:19 ───
    │
 35 │     fun t0(): Box<bool> {
    │                   ---- Is not compatible with: 'bool'
    ·
 40 │         let r = Container::get_ref(&v);
    │                 ---------------------- The type: integer
 41 │         id(r);
 42 │         b
    │         ^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_pack_invalid.move:10:23 ───
    │
 10 │     public fun get<V: copyable>(self: &T<V>): V {
    │                       -------- 'copyable' constraint declared here
    ·
 28 │     resource struct R{}
    │     -------- The type's constraint information was determined here
    ·
 47 │         let x = Container::get(&v);
    │                 ^^^^^^^^^^^^^^^^^^ Constraint not satisfied.
 48 │         let b = Box { f1: x, f2: x };
 49 │         Container::put(&mut v, Box {f1: R{}, f2: R{}});
    │                                ---------------------- The resource type '0x1::M::Box<0x1::M::R>' does not satisfy the constraint 'copyable'
    │

